# axum-sqlx-utoipa

./: .env  .gitignore  Cargo.toml  Makefile  README.md
.sqlx/: query-0561ac9eef9f70215adee14c1adc608ca499e25ef90ff976a255bb6f73fbbba2.json  query-1970b99275437ec134b15c9752ba3ac2c8fb9499431a092f8a1e8868fbf32fb1.json  query-1dd0ca82b0645872adbbee4d551d80db1f430077890628addc25dc5ad16a0b71.json  query-7b770a2ae1f6c6a802c94e2e5a888482bbdcfa2dacc6d928f0a4fc683465b195.json  query-a85e1a2c8480749b665140dbba1cef16596f52323ec17988cc9abaabe7486c63.json  query-e7f149a9c946ad10c2c53f9a3e1a22de81b6294b165d56d63bf738a69b5c6471.json
docs/: openapi.json
migrations/: 20240222203528_create_stories.sql  20240222203532_create_tasks.sql  20240817225353_create_story_files.sql  20240913045015_stories.down.sql  20240913045015_stories.up.sql  20240913045022_tasks.up.sql  20240913045027_story_files.down.sql  20240913045027_story_files.up.sql
scripts/: create-stories.lua  init-database.sql
src/: container.rs  lib.rs  main.rs  openapi.rs
src/action/: file.rs  mod.rs  story.rs  task.rs
src/api/: ctx.rs  dto.rs  mod.rs  page.rs  status.rs  story.rs  task.rs  tracer.rs
src/api/dto/: mod.rs  page.rs  story.rs  task.rs
src/api/routes/: file.rs  mod.rs  status.rs  story.rs  task.rs
src/config/: database.rs  mod.rs  storage.rs  tcp.rs
src/domain/: file.rs  mod.rs  status.rs  storage.rs  story.rs  story_file.rs  task.rs
src/driver/: mod.rs
src/driver/message/: email.rs  mod.rs  sms.rs
src/driver/storage/: fs.rs  mem.rs  minio.rs  mod.rs
src/error/: http.rs  mod.rs  validate.rs
src/keeper/: file.rs  mod.rs  story.rs  task.rs
src/repo/: file.rs  mod.rs  sql.rs  story.rs  task.rs
src/service/: mod.rs  story.rs  task.rs
src/service/story/: create_story.rs  delete_story.rs  get_stories.rs  get_story.rs  mod.rs  update_story.rs
src/service/task/: create_task.rs  delete_task.rs  get_task.rs  get_tasks.rs  mod.rs  update_task.rs
