[package]
name = "sqlx-todos"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = { version = "0.7", default-features = false, features = [
    "json",
    "query",
    "http1",
    "tokio",
] }
base64 = "0.22"
borsh = { version = "1", features = ["derive"] }
borsh-derive = "1"
dotenvy = "0.15"
futures-util = "0.3"
mimalloc = { version = "0.1", default-features = false }
num_cpus = "1.0"
percent-encoding = "2"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
] }
strum = "0.26"
strum_macros = "0.26"
thiserror = "1"
tokio = { version = "1.33", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
validator = { version = "0.17", features = ["derive"] }

[dev-dependencies]
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres"] }

[profile.release]
codegen-units = 1
lto = 'thin'
