[package]
name = "sqlx-todos"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "openapi"
path = "./src/openapi.rs"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", default-features = false, features = [
    "json",
    "query",
    "http1",
    "tokio",
    "matched-path",
    "multipart",
] }
base64 = "0.22"
borsh = { version = "1", features = ["derive"] }
borsh-derive = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures-util = "0.3"
mimalloc = { version = "0.1", default-features = false }
num_cpus = "1"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
    "uuid",
    "chrono",
] }
strum = "0.27"
strum_macros = "0.27"
thiserror = "2"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
testcontainers = "0.24"
testcontainers-modules = { version = "0.12", features = ["postgres"] }

[profile.release]
codegen-units = 1
lto = 'thin'
panic = 'abort'
